# General-Assembler

./: .gitignore  Makefile  OOA.md  Object Oriented Analysis.md  README.md  System_Specification.md  avr_isa_functions.cpp  avrtest  caltech10_isa_functions.cpp  class_template.cpp  class_template.hpp  list_gena.lst
.obsidian/: workspace.json
GenA/: CMakeLists.txt  Makefile  gena  list_gena.lst  user_lib
GenA/config/: avr_isa.txt  caltech10_isa.txt
GenA/include/: .code_macro.hpp.swp  .isa.hpp.swp  asm_line.hpp  assembler.hpp  code_macro.hpp  expression.hpp  isa.hpp  operator.hpp
GenA/lib/: asm_line.cpp  assembler.cpp  code_macro.cpp  isa.cpp
GenA/src/: code_macro.cpp  main  main.cpp
GenA/utils/: avr_isa.txt  caltech10_isa_functions.cpp  main.s
deprecated/: avr_isa_functions.cpp  caltech10_isa_functions.cpp
python parser/: codes.txt  output.txt  script.py
utils/: and.s  avr_isa.txt  avr_isa_functions  avr_isa_functions.cpp  caltech10_isa.txt  caltech10_isa_functions  caltech10_isa_functions.cpp  main.s  user_lib
